# pypdf

./: .gitignore  OpenAI_Functions.py  README.md  memory.py  pdf-memory.py  pdf.py  pyproject.toml  stock.py
readpdf/: cli.py
