[tool.poetry]
name = "readpdf"
version = "0.1.0"
description = ""
authors = ["kkdai"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.196"
pypdf = "^3.9.1"
chromadb = "^0.3.26"
openai = "^0.27.8"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
