[tool.poetry]
name = "readpdf"
version = "0.1.0"
description = ""
authors = ["kkdai"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.196"
pypdf = "^3.9.1"
chromadb = "^0.3.26"
openai = "^0.27.8"
tiktoken = "^0.4.0"
click = "^8.1.3"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.33.0"
toml = "^0.10.2"
flake8 = "^6.0.0"
pytest = "^7.3.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
readpdf = "readpdf.cli:main"
